Sun Oct 28 21:37:34 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Group tests that they parse
	  UTF-16XX encoded XML that has encoding="UTF-16" in XML declaration.

Sun Oct 28 21:25:11 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/source.rb (REXML::IOSource#initialize): Reduce
	  @line_break initialize code. It should be done only in #encoding=.
	* lib/rexml/parsers/baseparser.rb: Don't set UTF-16 encoding to
	  source by encoding="UTF-16" in XML declaration because UTF-16XX
	  source encoding should be set in Source#initialize or
	  IOSource#intialize. They should handle BOM. Parser should not
	  consider about it.

Sun Oct 28 21:18:37 2012  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_document.rb: Add tests for parsing XML encoded
	  by UTF-16 with BOM.

Sun Oct 28 19:12:11 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (iso8601_{ext,bas}_time): should not match
	  empty string.

Sun Oct 28 18:51:33 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_parse.c (date__parse): revised the tight parser.

Sun Oct 28 15:41:50 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Add :encoding option
	  to support custom XML encoding.
	  [Feature #4872] (work in progress)
	* test/rexml/test_document.rb: Add tests for the above change.

Sun Oct 28 15:00:19 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Remove needless
	  indent in document.

Sun Oct 28 14:59:14 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Accept options
	  Hash as argument.
	* test/rexml/test_document.rb: Add tests for the above change.

Sun Oct 28 14:09:44 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Fix wrong usage
	  in document.

Sun Oct 28 14:03:48 2012  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/document.rb (REXML::Document#write): Fix wrong method