@@ -1,3 +1,10 @@
+Sun Oct 28 21:40:13 2012  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rexml/parsers/baseparser.rb: Fix a bug that UTF-8 is used
+	  for UTF-16XX encoded XML that doesn't have encoding="UTF-16" in
+	  XML declration.
+	* test/rexml/test_document.rb: Add tests for the above change.
+
 Sun Oct 28 21:37:34 2012  Kouhei Sutou  <kou@cozmixng.org>
 
 	* test/rexml/test_document.rb: Group tests that they parse
